v0.5.0/_sources/projections/misc/misc_eckertVI.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/misc/misc_eckertVI.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_projections_misc_misc_eckertVI.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_misc_misc_eckertVI.py:


Eckert VI
=========

The Eckert VI projections, presented by the German cartographer Max
Eckert-Greiffendorff in 1906, is a pseudo-cylindrical equal-area projection.
Central meridian and all parallels are straight lines; other meridians are
equally spaced sinusoids. The scale is true along latitude 49°16’.


**ks**\ [*lon0/*]\ *scale* or **Ks**\ [*lon0/*]\ *width*

The projection is set with **ks** or **Ks**. The central meridian is set with
the optional *lon0*, and the figure size is set with *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 16-22



.. image-sg:: /projections/misc/images/sphx_glr_misc_eckertVI_001.png
   :alt: misc eckertVI
   :srcset: /projections/misc/images/sphx_glr_misc_eckertVI_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>






|

.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    # Use region "d" to specify global region (-180/180/-90/90)
    fig.coast(region="d", projection="Ks12c", land="ivory", water="bisque4", frame="afg")
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.971 seconds)


.. _sphx_glr_download_projections_misc_misc_eckertVI.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: misc_eckertVI.py <misc_eckertVI.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: misc_eckertVI.ipynb <misc_eckertVI.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
